--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,5 @@ crashlytics-build.properties
 /.idea/vcs.xml
 /.idea/.idea.Ai_in_games/.idea/projectSettingsUpdater.xml
 /.idea/.idea.Ai_in_games/.idea/workspace.xml
+/.idea/indexLayout.xml
+/.idea/projectSettingsUpdater.xml
